# SWIFTREPLY

./: .env.example  .gitignore  App.jsx  PLATFORM_BUILDS.md  README.md  docker-compose.yml  main.py  render.yaml
.github/workflows/: build-all-platforms.yml  ci.yml
android/: build.gradle  settings.gradle  variables.gradle
android/app/: build.gradle  proguard-rules.pro
backend/: Dockerfile  alembic.ini  requirements.txt  start-backend.sh  swiftreply.spec
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/db/: database.py  models.py
backend/app/middleware/: auth.py
backend/app/routes/: ai_routes.py  analytics.py  auth.py  broadcast.py  contacts.py  conversations.py  evolution_webhook.py  messages.py  templates.py  users.py  webhook.py
backend/app/services/: evolution_service.py  gemini_service.py  websocket_manager.py  whatsapp_service.py
backend/tests/: test_health.py
database/: init.sql
frontend/: capacitor.config.ts  index.html  nginx.conf  package.json  start-frontend.sh  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/hooks/: useAuthStore.js  useWebSocket.js
frontend/src/pages/: AnalyticsPage.jsx  BroadcastPage.jsx  ContactsPage.jsx  ConversationsPage.jsx  DashboardPage.jsx  LoginPage.jsx  RegisterPage.jsx  SettingsPage.jsx  TeamPage.jsx  (+1 more)
mobile/: MOBILE_DEPLOYMENT.md
postman/: collection.json
scripts/: build-android.sh  build-macos.sh  build-windows.bat
(+3 files in other folders)
